logo on sub-pages + logo display fixed on mobile view (new html file)

--- a/css/style.css
+++ b/css/style.css
@@ -264,41 +264,7 @@ a {
 
 
 .project-box img:hover {
-    filter:opacity(.5);
-}
-
-.container {
-    position: relative;
-    width: 100%;
-}
-
-.overlay {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    transition: .5s ease;
-    background-color: #008CBA;
-}
-
-.container:hover .overlay {
-    opacity: 1;
-}
-
-.text2 {
-    color: white;
-    font-size: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    text-align: center;
+    filter:opacity(.8);
 }
 
 /* -------------------- Technique text must be aligned with the img on top of it, use flex-box.
@@ -324,14 +290,20 @@ No usage of margin-right, or text-align! */
 }
 
 #navbar-bio {
-
     transition: top 0.6s ease;
     -webkit-transition: top 0.6s ease;
-    position: fixed;
     top: 0;
     width: 100%;
     padding: 2em 1em 0em;
     color: black;
+}
+
+#navbar-details {
+    transition: top 0.6s ease;
+    -webkit-transition: top 0.6s ease;
+    top: 0;
+    width: 100%;
+    padding: 2em 1em 0em;
 }
 
 ul {
@@ -575,20 +547,48 @@ footer h4 {
     margin: 1em 0;
 }
 
+/*--------------------------------------- DETAILS PAGE */
+
+.vl-details {
+    border-left: 1px solid white;
+    height: 200px;
+}
+
+.description-box {
+    text-align: justify;
+    padding: 2em 9% 0em;
+    line-height: 45px;
+}
+
+.description-box p {
+    line-height: 33px;
+}
+
+.title {
+    font-size: 40px;
+    margin-bottom: 1em;
+}
+
+.project-image {
+    padding-top: 4em;
+    width: 90%;
+    left: 0;
+    bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
 
 
-/*--------------------------------------- MEDIA QUERIES */
+/*--------------------------------------- FOOTER */
+
+/*************** MEDIA QUERIES ***************/
 
 @media only screen and (max-width: 700px) {
 
     .technique {
         display: none;
     }
-
-    ul img {
-        display: none;
-    }
-
 }
 
 
@@ -603,6 +603,60 @@ footer h4 {
         top: 15px;
         right: 35px;
 
+    }
+}
+
+@media (min-width: 768px) {
+
+    .project-image {
+        width: 40%;
+    }
+
+    .long-description {
+        width: 50%;
+        left: 0;
+        bottom: 0;
+        margin-left: auto;
+        margin-right: 1em;
+        display: block;
+    }
+
+    .start-box {
+        margin-left: 2em;
+    }
+
+}
+
+
+
+/*--------------------------------------- MEDIA QUERIES */
+
+@media only screen and (max-width: 700px) {
+
+    .technique {
+        display: none;
+    }
+
+    ul img {
+        display: none;
+    }
+
+    ul .sub-logo {
+        display: block;
+    }
+}
+
+
+@media screen and (max-height: 450px) {
+
+    .overlay a {
+        font-size: 20px
+    }
+
+    .overlay .closebtn {
+        font-size: 40px;
+        top: 15px;
+        right: 35px;
     }
 }
 
